--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -37,6 +37,7 @@ Here are a few steps to get you started on Mark: +
 .  Double-click the file to start the application. The GUI should appear in a few seconds.
 //TODO: update UI screenshot
 +
+.GUI for Mark
 image::Ui.png[width="790"]
 +
 // TODO: move this part to <<Using Mark>>
@@ -66,7 +67,7 @@ There are three main areas in Mark:
 
 // TODO: describe properly (this is very 'functional' but may not be user-friendly)
 The *_command box_* is the area for you to enter commands. The result of each command will be shown
-in the result display box, immediately below the command box.
+in the *_result display box_*, immediately below the command box.
 
 .The command box and result display box
 image::ui-screenshots/CommandBox.png[]
@@ -137,6 +138,8 @@ E.g. `[t/TAG]...` can be used as `{nbsp}` (i.e. 0 times), `t/module`,
 * Parameters can be used in any order unless otherwise specified. +
 E.g. if the command specifies `u/URL n/NAME`, `n/NAME u/URL` is also acceptable.
 
+====
+
 '''
 
 === General
@@ -175,40 +178,38 @@ Goes to the Offline tab which shows the offline copy of bookmarks.
 
 ==== Undoing previous commands: *`undo`*
 // tag::undo-command[]
-Restores the list to the state before the given number of previous undoable commands were
+If you mistakenly enter a command that permanently changes Mark, do not worry, you can always use `undo` to
+rectify the mistake! This command restores Mark to the state before the given number of previous undoable commands were
 executed.
 
 Format: `*undo* [STEP=1]`
 
+For example:
+
+* When you accidentally delete a wrong bookmark and you want to bring it back. There is no
+need for you to manually add that bookmark back as `undo` will do the magic for you. Just input `undo`
+in the command box, the deleted bookmark will reappear in your bookmark list.
+
+* Suppose you have entered two `delete` commands, `*delete* 1` and `*delete* 2`, and now you
+want to get back both bookmarks, a possible way is enter `undo` twice. Besides, Mark also
+offers an alternative where you can just type `undo 2` to undo these two commands.
+// end::undo-command[]
+
+Parameter constraints:
 //TODO:Check whether reminder supports undo/redo, include other
 //undoable commands as well
 ****
-* Undoable commands include commands that modify the bookmark list or
-reminders, which includes `add`, `edit`, `delete`, `clear`, `reminder`,
-`reminder-edit`, `reminder-delete`, etc).
 * `STEP` must be a positive integer `1`, `2`, `3`, ...
+* Undoable commands include commands that modify the bookmark list, folders,
+reminders or annotations, which includes `add`, `edit`, `delete`, `clear`, `reminder`,
+`folder`, `annotate`, etc).
 ****
-
-Examples:
-
-* `*undo*` +
-Restores the bookmark list to the state before the previous undoable command was executed.
-
-* `*delete* 1` +
-`*delete* 2` +
-`*undo* 2` +
-Restores the bookmark list to the state before the 2 `*delete*` commands were executed.
-// end::undo-command[]
 
 ==== Redoing previously undone commands: *`redo`*
 // tag::redo-command[]
 This command reverses the given number of undone actions.
 
 Format: `*redo* [STEP=1]`
-
-****
-* `STEP` must be a positive integer `1`, `2`, `3`, ...
-****
 
 Examples:
 
@@ -221,6 +222,11 @@ Reverses the most recent `*undo*` command.
 `*redo* 2` +
 Restores the bookmark list to the state before the `*undo* 2` command was executed. The
 two bookmarks get deleted again.
+
+Parameter constraints:
+****
+* `STEP` must be a positive integer `1`, `2`, `3`, ...
+****
 
 // end::redo-command[]
 
@@ -341,21 +347,23 @@ Returns any bookmark with the tag School or folder CS2103T or that contains gith
 
 ==== Opening a bookmark: *`goto`*
 // tag::goto-command[]
-Opens the specified the bookmark from the bookmark manager.
+This command opens the specified the bookmark from the bookmark manager.
 
 Format: `*goto* INDEX`
 
+For example:
+
+* `*list*` +
+`*goto* 1` +
+Opens the first bookmark in the bookmark manager.
+
+Parameter constraints:
 ****
 * Opens the bookmark at the specified INDEX.
 * The index refers to the index number shown in the displayed bookmark list.
 * The index must be a positive integer `1`, `2`, `3`, …​
 ****
 
-Examples:
-
-* `*list*` +
-`*goto* 1` +
-Opens the first bookmark in the bookmark manager.
 // end::goto-command[]
 
 ==== Adding a bookmark: *add*
@@ -456,10 +464,11 @@ Deletes the 1st bookmark in the results of the find command.
 
 ==== Adding a bookmark to Favorites: *`favorite|fav`*
 // tag::favorite-command[]
-Adds a Favorite tag to the specified bookmark.
+This command adds a `Favorite` tag to the specified bookmark.
 
 Format: `*favorite|fav* INDEX`
 
+Parameter constraints:
 ****
 * `fav` is an alias for `favorite`
 * Removing the Favorite tag is the same as removing a normal tag from a bookmark (see <<editing-bookmarks>>)
